test/Fail/Issue2964.err
Issue2964.agda:16.16-20: error: [UnequalTerms]
The terms
  test .fun Bool false x refl
and
  false
are not equal at type Bool
when checking that the expression refl has type
test .fun Bool false x refl ≡ false
